test/files/pos/t1836/J.java
public abstract class J<T> { protected J(T id) { } }
